# sdk-rust

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
.openapi-generator/: FILES
docs/: ApiKeyListResponse.md  ApiKeyResponse.md  ApiKeysApi.md  AvailableFormats.md  CdnUrls.md  CreateApiKeyRequest.md  CreateApiKeyResponse.md  CreatePresetRequest.md  CreateSignedUrlRequest.md  CreateSignedUrlRequestTransformation.md  CurrentPeriod.md  DeleteApiKeyResponse.md  DeletePresetResponse.md  DeleteResponse.md  ErrorDetail.md  FolderItem.md  HateoasLinks.md  HealthApi.md  HealthResponse.md  ImageDimensions.md  ImageListItem.md  ImageListResponse.md  ImageMetadata.md  ImagesApi.md  ListPresetsResponse.md  MetadataResponse.md  PathDeleteResponse.md  PlanLimits.md  Preset.md  PresetsApi.md  SearchResponse.md  SearchResult.md  SettingsApi.md  SettingsResponse.md  SettingsUpdateResponse.md  SignedUrlResponse.md  UpdatePresetRequest.md  UpdateSettingsRequest.md  UploadResponse.md  UsageApi.md  (+2 more)
src/apis/: api_keys_api.rs  configuration.rs  health_api.rs  images_api.rs  mod.rs  presets_api.rs  settings_api.rs  usage_api.rs
src/models/: active_signed_url.rs  api_key_list_response.rs  api_key_response.rs  available_formats.rs  cdn_urls.rs  create_api_key_request.rs  create_api_key_response.rs  create_preset_request.rs  create_signed_url_request.rs  create_signed_url_request_transformation.rs  credits.rs  current_period.rs  folder_item.rs  (+29 more)
tests/: apis_test.rs  integration_test.rs  models_test.rs
